--- a/assets/variable.scss
+++ b/assets/variable.scss
@@ -7,3 +7,5 @@ $light-color: #161616;
 $bg-color: #161616;
 $bg-color-dark: #181818;
 $bg-color-light: #181818;
+
+$bezier: cubic-bezier(0.08, 0.91, 0, 0.96);
