--- a/assets/style.scss
+++ b/assets/style.scss
@@ -59,88 +59,85 @@ body {
 }
 
 .index-geo {
-  height: 0%;
-  overflow: hidden;
-
-  .geo {
+  * {
     position: absolute;
     opacity: 0.7;
     background-size: contain;
     background-repeat: no-repeat;
+  }
 
-    &.geo1 {
-      background-image: url(assets/images/geo1.svg);
-      background-position: top right;
-      background-size: contain;
-      right: 2rem;
-      top: 2rem;
-      height: 4.6rem;
-      width: 4.6rem;
-    }
+  .geo1 {
+    background-image: url(assets/images/geo1.svg);
+    background-position: top right;
+    background-size: contain;
+    right: 2rem;
+    top: 2rem;
+    height: 4.6rem;
+    width: 4.6rem;
+  }
 
-    &.geo2 {
-      background-image: url(assets/images/geo2.svg);
-      left: 0rem;
-      bottom: 0rem;
-      height: 12rem;
-      width: 12rem;
-      transform: translate(-20%, 4%);
-    }
+  .geo2 {
+    background-image: url(assets/images/geo2.svg);
+    left: 0rem;
+    bottom: 0rem;
+    height: 12rem;
+    width: 12rem;
+    transform: translate(-20%, 4%);
+  }
 
-    &.geo3 {
-      background-image: url(assets/images/geo3.svg);
-      background-position: left center;
-      background-size: contain;
-      right: 0rem;
-      top: 0rem;
-      height: 60rem;
-      width: 30rem;
-      transform: translate(75%, 10%);
-    }
+  .geo3 {
+    background-image: url(assets/images/geo3.svg);
+    background-position: left center;
+    background-size: contain;
+    right: 0rem;
+    top: 0rem;
+    height: 60rem;
+    width: 30rem;
+    transform: translate(75%, 10%);
+  }
 
-    &.geo4 {
-      background-image: url(assets/images/geo4.svg);
-      background-position: center center;
-      background-size: cover;
-      left: 0rem;
-      top: 0rem;
-      height: 100%;
-      width: 100%;
-      transform: scale(1.2) translate(0%, -5%);
-    }
+  .geo4 {
+    background-image: url(assets/images/geo4.svg);
+    background-position: center center;
+    background-size: cover;
+    left: 0rem;
+    top: 0rem;
+    height: 150%;
+    width: 100%;
+    transform: scale(1.2) translate(0%, -5%);
+  }
 
-    &.geo5 {
-      background-image: url(assets/images/geo5.svg);
-      background-position: left bottom;
-      background-size: contain;
-      left: 0rem;
-      top: 0rem;
-      height: 20rem;
-      width: 10rem;
-      transform: translate(-8%, -4%);
-    }
+  .geo5 {
+    background-image: url(assets/images/geo5.svg);
+    background-position: left bottom;
+    background-size: contain;
+    left: 0rem;
+    top: 0rem;
+    height: 20rem;
+    width: 10rem;
+    transform: translate(-8%, -4%);
+  }
 
-    &.geo6 {
-      background-image: url(assets/images/geo6.svg);
-      background-position: right bottom;
-      background-size: contain;
-      right: 0rem;
-      bottom: 0rem;
-      height: 8rem;
-      width: 8rem;
-      transform: translate(12%, 12%);
-    }
+  .geo6 {
+    background-image: url(assets/images/geo6.svg);
+    background-position: right bottom;
+    background-size: contain;
+    right: 0rem;
+    bottom: 0rem;
+    height: 8rem;
+    width: 8rem;
+    transform: translate(12%, 12%);
+  }
 
-    &.geo7 {
-      background-image: url(assets/images/geo7.svg);
-      background-position: left top;
-      background-size: contain;
-      left: 6rem;
-      bottom: 0rem;
-      height: 25rem;
-      width: 10rem;
-      transform: translate(0%, 4%);
-    }
+  .geo7 {
+    background-image: url(assets/images/geo7.svg);
+    background-position: left top;
+    background-size: contain;
+    left: 6rem;
+    bottom: 0rem;
+    height: 25rem;
+    width: 10rem;
+    transform: translate(0%, 20%);
   }
 }
 
